2006-08-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-enable-google-feeling-lucky): New variable.
	(w3m-input-url): Disable the Google feeling lucky feature if it is nil.

2006-08-28  David Hansen  <david.hansen@physik.fu-berlin.de>

	* shimbun/sb-the-onion.el: New module.

2006-08-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-ohmynews-jp.el (shimbun-ohmynews-jp-content-start)
	(shimbun-ohmynews-jp-content-end): Relax.

2006-08-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-show-decoded-url): Add entry for ohmynews.co.jp.

	* shimbun/sb-ohmynews-jp.el (shimbun-get-headers): Fetch old
	articles; show Japanese group name in From.
	(shimbun-make-contents): Break long Japanese lines.

2006-08-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-relationship-search-patterns): Call
	`w3m-decode-anchor-string' in order to decode "&amp;" in anchor
	strings.
	(w3m-relationship-freshmeat-estimate): Removed.
	(w3m-relationship-estimate-rules): Use
	`w3m-relationship-simple-estimate' instead of the above, to
	simplify related codes.

2006-08-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-ohmynews-jp.el: New module.

2006-08-24  David Hansen  <david.hansen@pysik.fu-berlin.de>

	* shimbun/sb-the-register.el (shimbun-make-contents): Fixed junk
	filtering regexp.

2006-08-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-cnet-jp.el (shimbun-cnet-jp-group-alist): Add
	"blog.geetstate".

2006-08-19  MIYOSHI Masanori  <miyoshi@meadowy.org>

	* shimbun/sb-makanai.el: Follow the change of the site.

2006-08-19  MIYOSHI Masanori  <miyoshi@meadowy.org>

	* shimbun/sb-msports-nifty.el: Follow the change of the site.

2006-08-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-sankei.el (shimbun-sankei-group-table): Add seiron
	group.
	(shimbun-sankei-get-headers-seiron): New function.
	(shimbun-get-headers): Use it.

2006-08-11  David Hansen  <david.hansen@pysik.fu-berlin.de>
