@@ -1,5 +1,8 @@
 2006-08-31  Katsumi Yamaoka  <yamaoka@jpl.org>
 
+	* shimbun/sb-ohmynews-jp.el (shimbun-get-headers): Fetch old
+	articles thoroughly.
+
 	* w3m.el (w3m-enable-google-feeling-lucky): New variable.
 	(w3m-input-url): Disable the Google feeling lucky feature if it is nil.
 
